// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styled objects Rendered 1`] = `
.dbdnba {
  height: 100%;
  background: #CFD8DC;
  font-size: 1rem;
  color: #795548;
  position: absolute;
  top: 0;
  right: 0;
  z-index: -1;
  width: 100%;
  overflow-y: auto;
  max-height: 300px;
  min-height: 100%;
  height: auto;
  transition: right 0.4s ease-in-out;
  -webkit-transition: right 0.4s ease-in-out;
}

<div
  className="dbdnba"
/>
`;

exports[`Styled objects Should change right style property, when opened 1`] = `
.eyQMxy {
  height: 100%;
  background: #CFD8DC;
  font-size: 1rem;
  color: #795548;
  position: absolute;
  top: 0;
  right: 100%;
  z-index: -1;
  width: 100%;
  overflow-y: auto;
  max-height: 300px;
  min-height: 100%;
  height: auto;
  transition: right 0.4s ease-in-out;
  -webkit-transition: right 0.4s ease-in-out;
}

<div
  className="eyQMxy"
  open={true}
/>
`;
